--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ commit-command.sh
 history_log.txt
 testCases_log.txt
 commit-command.sh
+**/node_modules
+history_log.txt
+testCases_log.txt
+commit-command.sh
