--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ testCases_log.txt
 history_log.txt
 testCases_log.txt
 commit-command.sh
+**/node_modules
+history_log.txt
+testCases_log.txt
+commit-command.sh
